--- a/dcl.ref.html
+++ b/dcl.ref.html
@@ -115,7 +115,9 @@ to a bit-field.
 or a <i ><a href='dcl.type.simple#nt:decltype-specifier'>decltype-specifier</a></i> (<a href='dcl.type.simple'>[dcl.type.simple]</a>) denotes a type <span class='texttt'>TR</span> that
 is a reference to a type <span class='texttt'>T</span>, an attempt to create the type “lvalue reference to <i>cv</i> 
 <span class='texttt'>TR</span>” creates the type “lvalue reference to <span class='texttt'>T</span>”, while an attempt to create
-the type “rvalue reference to <i>cv</i> <span class='texttt'>TR</span>” creates the type <span class='texttt'>TR</span>. [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
+the type “rvalue reference to <i>cv</i> <span class='texttt'>TR</span>” creates the type <span class='texttt'>TR</span>.
+[&nbsp;<i>Note:</i><span class='space'></span> This rule is known as reference collapsing. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
+[&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 int i;
 typedef int&amp; LRI;
 typedef int&amp;&amp; RRI;
