--- a/func.bind.bind.html
+++ b/func.bind.bind.html
@@ -17,7 +17,7 @@ in <span class='texttt'>BoundArgs</span>, <span class='texttt'>is_constructible_
 wN)</span> (<a href='func.require'>[func.require]</a>) shall be a valid expression for some
 values <i>w1, w2, ..., wN</i>, where
 <span class='texttt'>N == sizeof...(bound_args)</span>.
-The <i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
+The cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
 as specified below, shall be neither <span class='texttt'>volatile</span> nor <span class='texttt'>const volatile</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A forwarding call wrapper <span class='texttt'>g</span> (<a href='func.require'>[func.require]</a>).
 The effect of <span class='texttt'>g(u1, u2, ..., uM)</span> shall
@@ -41,7 +41,7 @@ in <span class='texttt'>BoundArgs</span>, <span class='texttt'>is_constructible_
 expression for some
 values <i>w1, w2, ..., wN</i>, where
 <span class='texttt'>N == sizeof...(bound_args)</span>.
-The <i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
+The cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
 as specified below, shall be neither <span class='texttt'>volatile</span> nor <span class='texttt'>const volatile</span>.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A forwarding call wrapper <span class='texttt'>g</span> (<a href='func.require'>[func.require]</a>).
 The effect of
@@ -60,7 +60,7 @@ that all of <span class='texttt'>FD</span> and <span class='texttt'>TiD</span> a
 corresponding types <span class='texttt'>V1, V2, ..., VN</span> depend on the
 types <span class='texttt'>TiD</span> derived from
 the call to <span class='texttt'>bind</span> and the
-<i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span> as follows:</p><ul ><li ><p >if <span class='texttt'>TiD</span> is <span class='texttt'>reference_wrapper&lt;T&gt;</span>, the
+cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span> as follows:</p><ul ><li ><p >if <span class='texttt'>TiD</span> is <span class='texttt'>reference_wrapper&lt;T&gt;</span>, the
 argument is <span class='texttt'>tid.get()</span> and its type <span class='texttt'>Vi</span> is <span class='texttt'>T&amp;</span>;</p></li><li ><p >if the value of <span class='texttt'>is_bind_expression_v&lt;TiD&gt;</span>
 is <span class='texttt'>true</span>, the argument is <span class='texttt'>tid(std::forward&lt;Uj&gt;(<span class='discretionary'></span>uj)...)</span>  and its
 type <span class='texttt'>Vi</span> is
