--- a/temp.decls.html
+++ b/temp.decls.html
@@ -320,15 +320,15 @@ a <i ><a href='expr.prim.lambda#nt:capture'>capture</a></i>.</p></li><li ><p >In
 <i ><a href='lex.name#nt:identifier'>identifier</a></i>.</p></li><li ><p >In a <i ><a href='expr.prim.fold#nt:fold-expression'>fold-expression</a></i> (<a href='expr.prim.fold'>[expr.prim.fold]</a>);
 the pattern is the <i ><a href='expr.cast#nt:cast-expression'>cast-expression</a></i>
 that contains an unexpanded parameter pack.
-</p></li></ul></div><div class='para' id='temp.variadic-5'><div class='marginalizedparent'><a class='marginalized' href='#temp.variadic-5'>5</a></div><p >For the purpose of determining whether a parameter pack satisfies a rule
-regarding entities other than parameter packs, the parameter pack is
-considered to be the entity that would result from an instantiation of
-the pattern in which it appears.</p><p >[&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
+</p></li></ul><p >[&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 template&lt;class ... Types&gt; void f(Types ... rest);
 template&lt;class ... Types&gt; void g(Types ... rest) {
   f(&amp;rest ...);     <span class='comment'>// “<span class='texttt'>&amp;rest ...</span>” is a pack expansion; “<span class='texttt'>&amp;rest</span>” is its pattern
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='temp.variadic-6'><div class='marginalizedparent'><a class='marginalized' href='#temp.variadic-6'>6</a></div><p >A parameter pack whose name appears within the pattern of a pack
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='temp.variadic-5'><div class='marginalizedparent'><a class='marginalized' href='#temp.variadic-5'>5</a></div><p >For the purpose of determining whether a parameter pack satisfies a rule
+regarding entities other than parameter packs, the parameter pack is
+considered to be the entity that would result from an instantiation of
+the pattern in which it appears.</p></div><div class='para' id='temp.variadic-6'><div class='marginalizedparent'><a class='marginalized' href='#temp.variadic-6'>6</a></div><p >A parameter pack whose name appears within the pattern of a pack
 expansion is expanded by that pack expansion. An appearance of the name of
 a parameter pack is only expanded by the innermost enclosing pack expansion.
 The pattern of a pack expansion shall name one or more parameter packs that
