--- a/temp.fct.spec.html
+++ b/temp.fct.spec.html
@@ -714,18 +714,18 @@ pointer or pointer to member type as described above, the following
 process is used to determine the deduced template argument values:</p><p >If
 <span class='texttt'>A</span>
 is a type
-<span class='list'></span><span class='item'></span><span class='relax'></span>
+<div class='indented'>
 <span class='math'><span class='mathit'>cv</span><sub >1,0</sub></span> “pointer to <span class='math'>&hellip;</span>” <span class='math'><span class='mathit'>cv</span><sub >1,<span class='mathalpha'>n</span>-1</sub></span> “pointer to”
-<span class='math'><span class='mathit'>cv</span><sub >1,<span class='mathalpha'>n</span></sub><span class='mathit'>T1</span></span>
-
+<span class='math'><span class='mathit'>cv</span><sub >1,<span class='mathalpha'>n</span></sub></span> <span class='texttt'>T1</span>
+</div>
 and
 <span class='texttt'>P</span>
 is a type
-<span class='list'></span><span class='item'></span><span class='relax'></span>
+<div class='indented'>
 <span class='math'><span class='mathit'>cv</span><sub >2,0</sub></span> “pointer to <span class='math'>&hellip;</span>” <span class='math'><span class='mathit'>cv</span><sub >2,<span class='mathalpha'>n</span>-1</sub></span> “pointer to”
-<span class='math'><span class='mathit'>cv</span><sub >2,<span class='mathalpha'>n</span></sub><span class='mathit'>T2</span></span>
-
-The cv-unqualified
+<span class='math'><span class='mathit'>cv</span><sub >2,<span class='mathalpha'>n</span></sub></span> <span class='texttt'>T2</span>,
+</div>
+then the cv-unqualified
 <span class='texttt'>T1</span>
 and
 <span class='texttt'>T2</span>
