--- a/basic.lookup.classref.html
+++ b/basic.lookup.classref.html
@@ -29,17 +29,19 @@ void B::f(::A* a) {
   a-&gt;~A();                      <span class='comment'>// OK: lookup in <span class='texttt'>*a</span> finds the injected-class-name
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >If the <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> in a class member access is a
-<i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> of the form</p><p ><span class='list'></span><span class='item'></span><span class='relax'></span>
-<span class='texttt'>class-name-or-namespace-name::...</span>
-</p><p >the <span class='grammarterm'>class-name-or-namespace-name</span> following the <span class='texttt'>.</span> or
+<i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> of the form
+</p><pre class='codeblock'>
+class-name-or-namespace-name::...
+</pre><p >the <span class='grammarterm'>class-name-or-namespace-name</span> following the <span class='texttt'>.</span> or
 <span class='texttt'>-&gt;</span> operator is
 first looked up in the class of the object expression and the name, if found,
 is used. Otherwise it is looked up in the context of the entire
 <i ><a href='expr.post#nt:postfix-expression'>postfix-expression</a></i>. [&nbsp;<i>Note:</i><span class='space'></span> See <a href='basic.lookup.qual'>[basic.lookup.qual]</a>, which
 describes the lookup of a name before <span class='texttt'>::</span>, which will only find a type
-or namespace name. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >If the <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> has the form</p><p ><span class='list'></span><span class='item'></span><span class='relax'></span>
-<span class='texttt'>::class-name-or-namespace-name::...</span>
-</p><p >the <span class='grammarterm'>class-name-or-namespace-name</span> is looked up in global scope
+or namespace name. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >If the <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> has the form
+</p><pre class='codeblock'>
+::class-name-or-namespace-name::...
+</pre><p >the <span class='grammarterm'>class-name-or-namespace-name</span> is looked up in global scope
 as a <i ><a href='class#nt:class-name'>class-name</a></i> or <i ><a href='namespace.def#nt:namespace-name'>namespace-name</a></i>.</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If the <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> contains a
 <i ><a href='temp.names#nt:simple-template-id'>simple-template-id</a></i> (<a href='temp.names'>[temp.names]</a>), the names in its
 <i ><a href='temp.names#nt:template-argument'>template-arguments</a></i> are looked up in the context in which the
