--- a/conv.html
+++ b/conv.html
@@ -132,9 +132,11 @@ int k = X().n; <span class='comment'>// OK, <span class='texttt'>X()</span> prva
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='qual'><h2 ><a class='secnum' href='#qual' style='min-width:88pt'>4.5</a> Qualification conversions <a class='abbr_ref' href='conv.qual'>[conv.qual]</a></h2><p ><span class='indexparent'><a class='index' id='conversion,qualification'></a></span></p><div class='para' id='qual-1'><div class='marginalizedparent'><a class='marginalized' href='#qual-1'>1</a></div><p >A <a class='hidden_link' href='#def:cv-decomposition' id='def:cv-decomposition'><i>cv-decomposition</i></a> of a type <span class='texttt'>T</span>
 is a sequence of
 <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>i</span></sub></span> and <span class='math'><span class='mathalpha'>P</span><sub ><span class='mathalpha'>i</span></sub></span>
-such that <span class='texttt'>T</span> is</p><p ><span class='list'></span><span class='item'></span><span class='relax'></span>
-“<span class='math'><span class='mathalpha'>cv</span><sub >0</sub></span> <span class='math'><span class='mathalpha'>P</span><sub >0</sub></span> <span class='math'><span class='mathalpha'>cv</span><sub >1</sub></span> <span class='math'><span class='mathalpha'>P</span><sub >1</sub></span> <span class='math'>⋯</span> <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span>-1</sub></span> <span class='math'><span class='mathalpha'>P</span><sub ><span class='mathalpha'>n</span>-1</sub></span> <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span></sub></span> <span class='texttt'>U</span>” for <i>n</i> <span class='math'>&gt; 0</span>,
-</p><p >where
+such that <span class='texttt'>T</span> is
+<div class='indented'>
+“<span class='math'><span class='mathalpha'>cv</span><sub >0</sub></span> <span class='math'><span class='mathalpha'>P</span><sub >0</sub></span> <span class='math'><span class='mathalpha'>cv</span><sub >1</sub></span> <span class='math'><span class='mathalpha'>P</span><sub >1</sub></span> <span class='math'>⋯</span> <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span>-1</sub></span> <span class='math'><span class='mathalpha'>P</span><sub ><span class='mathalpha'>n</span>-1</sub></span> <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span></sub></span> <span class='texttt'>U</span>” for <span class='math'><span class='mathalpha'>n</span> &gt; 0</span>,
+</div>
+where
 each <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>i</span></sub></span> is a set of cv-qualifiers (<a href='basic.type.qualifier'>[basic.type.qualifier]</a>), and
 each <span class='math'><span class='mathalpha'>P</span><sub ><span class='mathalpha'>i</span></sub></span> is
 “pointer to” (<a href='dcl.ptr'>[dcl.ptr]</a>),
@@ -149,11 +151,11 @@ The type denoted by the <i ><a href='dcl.name#nt:type-id'>type-id</a></i> <span 
 has two cv-decompositions,
 taking <span class='texttt'>U</span> as “<span class='texttt'>int</span>” and as “pointer to <span class='texttt'>const int</span>”.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
-The <i>n</i>-tuple of cv-qualifiers after the first one
+The <span class='math'><span class='mathalpha'>n</span></span>-tuple of cv-qualifiers after the first one
 in the longest cv-decomposition of <span class='texttt'>T</span>, that is,
-<span class='math'><span class='mathalpha'>cv</span><sub >1</sub></span>, <span class='math'><span class='mathalpha'>cv</span><sub >2</sub></span>, <span class='math'>⋯</span>, <span class='math'><span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span></sub></span>, is called the
+<span class='math'><span class='mathalpha'>cv</span><sub >1</sub>, <span class='mathalpha'>cv</span><sub >2</sub>, <span class='dotsc'></span>, <span class='mathalpha'>cv</span><sub ><span class='mathalpha'>n</span></sub></span>, is called the
 <a class='hidden_link' href='#def:cv-qualification_signature' id='def:cv-qualification_signature'><i>cv-qualification signature</i></a> of <span class='texttt'>T</span>.</p></div><div class='para' id='qual-2'><div class='marginalizedparent'><a class='marginalized' href='#qual-2'>2</a></div><p ><span class='indexparent'><a class='index' id='type,similar'></a></span>Two types <span class='texttt'>T1</span> and <span class='texttt'>T2</span> are <a class='hidden_link' href='#def:similar_types' id='def:similar_types'><i>similar</i></a> if
-they have cv-decompositions with the same <i>n</i>
+they have cv-decompositions with the same <span class='math'><span class='mathalpha'>n</span></span>
 such that corresponding <span class='math'><span class='mathalpha'>P</span><sub ><span class='mathalpha'>i</span></sub></span> components are the same
 and the types denoted by <span class='texttt'>U</span> are the same.</p></div><div class='para' id='qual-3'><div class='marginalizedparent'><a class='marginalized' href='#qual-3'>3</a></div><p >A prvalue expression of type <span class='texttt'>T1</span>
 can be converted to type <span class='texttt'>T2</span>
