--- a/unord.req.html
+++ b/unord.req.html
@@ -393,7 +393,7 @@ start.  Implementations are permitted to ignore the hint.    <span class='indexp
  Average case <span class='math'>Ο(<span class='math'>1</span>)</span>, worst case <span class='math'>Ο(<span class='math'><span class='texttt'>a.size()</span></span>)</span>.  </td></tr><tr class='rowsep'><td class='left'> 
 <span class='texttt'>a.merge(a2)</span>              </td><td class='left'>
  <span class='texttt'>void</span>             </td><td class='left'>
- Pre: <span class='texttt'>a_eq.get_allocator() == nh.get_allocator()</span>.<span class='hfill'></span><br/>
+ Pre: <span class='texttt'>a.get_allocator() == a2.get_allocator()</span>.<span class='hfill'></span><br/>
  Attempts to extract each element in <span class='texttt'>a2</span> and insert it into <span class='texttt'>a</span>
  using the hash function and key equality predicate of <span class='texttt'>a</span>.
  In containers with unique keys, if there is an element in <span class='texttt'>a</span> with
