--- a/utilities.html
+++ b/utilities.html
@@ -7019,7 +7019,7 @@ in <span class='texttt'>BoundArgs</span>, <span class='texttt'>is_constructible_
 wN)</span> (<a href='func.require'>[func.require]</a>) shall be a valid expression for some
 values <i>w1, w2, ..., wN</i>, where
 <span class='texttt'>N == sizeof...(bound_args)</span>.
-The <i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
+The cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
 as specified below, shall be neither <span class='texttt'>volatile</span> nor <span class='texttt'>const volatile</span>.</p></div></div><div class='para' id='func.bind.bind-3'><div class='marginalizedparent'><a class='marginalized' href='#func.bind.bind-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A forwarding call wrapper <span class='texttt'>g</span> (<a href='func.require'>[func.require]</a>).
 The effect of <span class='texttt'>g(u1, u2, ..., uM)</span> shall
@@ -7043,7 +7043,7 @@ in <span class='texttt'>BoundArgs</span>, <span class='texttt'>is_constructible_
 expression for some
 values <i>w1, w2, ..., wN</i>, where
 <span class='texttt'>N == sizeof...(bound_args)</span>.
-The <i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
+The cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span>,
 as specified below, shall be neither <span class='texttt'>volatile</span> nor <span class='texttt'>const volatile</span>.</p></div></div><div class='para' id='func.bind.bind-7'><div class='marginalizedparent'><a class='marginalized' href='#func.bind.bind-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A forwarding call wrapper <span class='texttt'>g</span> (<a href='func.require'>[func.require]</a>).
 The effect of
@@ -7062,7 +7062,7 @@ that all of <span class='texttt'>FD</span> and <span class='texttt'>TiD</span> a
 corresponding types <span class='texttt'>V1, V2, ..., VN</span> depend on the
 types <span class='texttt'>TiD</span> derived from
 the call to <span class='texttt'>bind</span> and the
-<i>cv</i>-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span> as follows:</p><ul ><li ><p >if <span class='texttt'>TiD</span> is <span class='texttt'>reference_wrapper&lt;T&gt;</span>, the
+cv-qualifiers <i>cv</i> of the call wrapper <span class='texttt'>g</span> as follows:</p><ul ><li ><p >if <span class='texttt'>TiD</span> is <span class='texttt'>reference_wrapper&lt;T&gt;</span>, the
 argument is <span class='texttt'>tid.get()</span> and its type <span class='texttt'>Vi</span> is <span class='texttt'>T&amp;</span>;</p></li><li ><p >if the value of <span class='texttt'>is_bind_expression_v&lt;TiD&gt;</span>
 is <span class='texttt'>true</span>, the argument is <span class='texttt'>tid(std::forward&lt;Uj&gt;(<span class='discretionary'></span>uj)...)</span>  and its
 type <span class='texttt'>Vi</span> is
@@ -7984,7 +7984,7 @@ with a BaseCharacteristic of
 <span class='texttt'>true_type</span> if the corresponding condition is <span class='texttt'>true</span>, otherwise
 <span class='texttt'>false_type</span>.</p></div><div id='meta.unary.cat'><h4 ><a class='secnum' href='#meta.unary.cat' style='min-width:118pt'>20.15.4.1</a> Primary type categories <a class='abbr_ref' href='meta.unary.cat'>[meta.unary.cat]</a></h4><div class='para' id='meta.unary.cat-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.cat-1'>1</a></div><p >The primary type categories correspond to the descriptions given in
 section <a href='basic.types'>[basic.types]</a> of the C++ standard.</p></div><div class='para' id='meta.unary.cat-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.cat-2'>2</a></div><p >For any given type <span class='texttt'>T</span>, the result of applying one of these templates to
-<span class='texttt'>T</span> and to <i>cv-qualified</i> <span class='texttt'>T</span> shall yield the same result.</p></div><div class='para' id='meta.unary.cat-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.cat-3'>3</a></div><p >[&nbsp;<i>Note:</i><span class='space'></span>
+<span class='texttt'>T</span> and to <i>cv</i> <span class='texttt'>T</span> shall yield the same result.</p></div><div class='para' id='meta.unary.cat-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.cat-3'>3</a></div><p >[&nbsp;<i>Note:</i><span class='space'></span>
 For any given type <span class='texttt'>T</span>, exactly one of the primary type categories
 has a <span class='texttt'>value</span> member that evaluates to <span class='texttt'>true</span>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><div class='numberedTable' id='tab:type-traits.primary'>Table <a href='#tab:type-traits.primary'>35</a> — Primary type category predicates<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Condition</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
@@ -8036,7 +8036,7 @@ but not pointers to non-static members.                        </td></tr><tr cla
  <span class='texttt'>struct is_function;</span>        </td><td class='left'>
 <span class='texttt'>T</span> is a function type (<a href='basic.compound'>[basic.compound]</a>)                     </td><td class='left'>   </td></tr></table></div></div></div><div id='meta.unary.comp'><h4 ><a class='secnum' href='#meta.unary.comp' style='min-width:118pt'>20.15.4.2</a> Composite type traits <a class='abbr_ref' href='meta.unary.comp'>[meta.unary.comp]</a></h4><div class='para' id='meta.unary.comp-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.comp-1'>1</a></div><p >These templates provide convenient compositions of the primary type
 categories, corresponding to the descriptions given in section <a href='basic.types'>[basic.types]</a>.</p></div><div class='para' id='meta.unary.comp-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.comp-2'>2</a></div><p >For any given type <span class='texttt'>T</span>, the result of applying one of these templates to
-<span class='texttt'>T</span>, and to <i>cv-qualified</i> <span class='texttt'>T</span> shall yield the same result.</p><div class='numberedTable' id='tab:type-traits.composite'>Table <a href='#tab:type-traits.composite'>36</a> — Composite type category predicates<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Condition</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
+<span class='texttt'>T</span> and to <i>cv</i> <span class='texttt'>T</span> shall yield the same result.</p><div class='numberedTable' id='tab:type-traits.composite'>Table <a href='#tab:type-traits.composite'>36</a> — Composite type category predicates<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Condition</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span>
 <span class='indexparent'><a class='index' id='is_reference'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
  <span class='texttt'>struct is_reference;</span>   </td><td class='left'>
